<resources>
    <string name="app_name">BDHouse</string>
    <string name="logo">logo</string>
    <string name="gerenciar_visitas">Gerenciar Visitas</string>
    <string name="inserir_visita">Inserir Visita</string>
    <string name="tempo_de_acesso_permitido">Tempo de acesso permitido</string>
    <string name="confirmar">Confirmar</string>
    <string name="nome">Nome</string>
    <string name="id">ID</string>
    <string name="editar_visita">Editar Visita</string>
    <string name="excluir">Excluir</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="logoUser">LogoUsuário</string>
    <string name="luzes">Luzes</string>
    <string name="visita">Visita</string>
    <string name="alarme">Alarme</string>
    <string name="eletrodomesticos">Eletrodomésticos</string>
    <string name="teto">Teto</string>
    <string name="solo">Umidade do solo</string>
    <string name="ar">Temperatura e umidade do ar</string>
    <string name="portao">Portão</string>
    <string name="usuario">Usuário</string>
    <string name="sair">sair</string>
    <string name="eletrodomestisco">Controle de Eletrodomésticos</string>
    <string name="ControlarAlarme">Controle do Alarme</string>
    <string name="parar">Parar</string>
    <string name="todo">TODO</string>
    <string name="ligar">Ligar</string>
    <string name="tv_quarto">TV-Quarto</string>
    <string name="desligar">Desligar</string>
    <string name="tv_quarto_principal">TV-Quarto Principal</string>
    <string name="microondas">Microondas</string>
    <string name="r_dio">Rádio</string>
    <string name="chuveiro">Chuveiro</string>
    <string name="chuveiro_su_te">Chuveiro Suíte</string>
    <string name="controle_de_eletro">Controle de Eletrodomésticos</string>

</resources>
