<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".EletrodomesticoActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView44"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:text="@string/ligar"
        app:layout_constraintBaseline_toBaselineOf="@+id/switch5"
        app:layout_constraintEnd_toEndOf="@+id/textView46"
        app:layout_constraintStart_toStartOf="@+id/textView46" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginEnd="28dp"
        android:text="@string/ligar"
        app:layout_constraintBaseline_toBaselineOf="@+id/switch6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/switch6" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:text="@string/ligar"
        app:layout_constraintBaseline_toBaselineOf="@+id/switch4"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:text="@string/ligar"
        app:layout_constraintBaseline_toBaselineOf="@+id/switch3"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/ligar"
        app:layout_constraintBaseline_toBaselineOf="@+id/switch9"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:text="@string/ligar"
        app:layout_constraintBaseline_toBaselineOf="@+id/switch7"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="204dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="204dp"
        android:text="@string/tv_quarto"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/switch7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="22dp"
        android:text="@string/tv_quarto_principal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="29dp"
        android:text="@string/microondas"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/r_dio"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView39"
        app:layout_constraintTop_toBottomOf="@+id/textView39" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="27dp"
        android:text="@string/chuveiro"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView40" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/chuveiro_su_te"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView41"
        app:layout_constraintTop_toBottomOf="@+id/textView41" />


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_eletro" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="94dp"
        android:text="@string/controle_de_eletro"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:text="@string/desligar"
        app:layout_constraintBaseline_toBaselineOf="@+id/switch3"
        app:layout_constraintEnd_toStartOf="@+id/switch3" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:text="@string/desligar"
        app:layout_constraintBaseline_toBaselineOf="@+id/switch6"
        app:layout_constraintEnd_toStartOf="@+id/switch6"
        app:layout_constraintStart_toEndOf="@+id/textView38" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:text="@string/desligar"
        app:layout_constraintBaseline_toBaselineOf="@+id/switch4"
        app:layout_constraintEnd_toStartOf="@+id/switch4" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/desligar"
        app:layout_constraintBaseline_toBaselineOf="@+id/switch5"
        app:layout_constraintStart_toStartOf="@+id/textView34" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desligar"
        app:layout_constraintBaseline_toBaselineOf="@+id/switch9"
        app:layout_constraintStart_toStartOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:text="@string/desligar"
        app:layout_constraintBaseline_toBaselineOf="@+id/switch7"
        app:layout_constraintEnd_toStartOf="@+id/switch9" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="13dp"
        app:layout_constraintBottom_toTopOf="@+id/switch6"
        app:layout_constraintEnd_toStartOf="@+id/textView47" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/textView46"
        app:layout_constraintTop_toBottomOf="@+id/switch6" />

    <Switch
        android:id="@+id/switch6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="266dp"
        app:layout_constraintEnd_toStartOf="@+id/textView45"
        app:layout_constraintStart_toEndOf="@+id/textView31"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="@+id/switch9"
        app:layout_constraintTop_toBottomOf="@+id/switch4" />

    <Switch
        android:id="@+id/switch9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toTopOf="@+id/switch7"
        app:layout_constraintEnd_toEndOf="@+id/switch7" />

    <Switch
        android:id="@+id/switch7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="51dp"
        app:layout_constraintEnd_toStartOf="@+id/textView49"
        app:layout_constraintTop_toBottomOf="@+id/switch5" />
</android.support.constraint.ConstraintLayout>