<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".BDHActivity"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/textView18"
        android:layout_width="86dp"
        android:layout_height="58dp"
        android:layout_marginBottom="53dp"
        android:layout_marginEnd="33dp"
        android:layout_marginTop="72dp"
        android:text="@string/ar"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton24" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="86dp"
        android:layout_height="42dp"
        android:layout_marginBottom="69dp"
        android:layout_marginTop="72dp"
        android:text="@string/solo"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton30" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="86dp"
        android:layout_height="19dp"
        android:layout_marginBottom="84dp"
        android:layout_marginTop="72dp"
        android:text="@string/teto"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="@+id/imageButton31"
        app:layout_constraintTop_toTopOf="@+id/imageButton31" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="135dp"
        android:layout_height="19dp"
        android:layout_marginBottom="64dp"
        android:layout_marginTop="72dp"
        android:text="@string/eletrodomesticos"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButton30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton25" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/portao"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/imageButton28" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/luzes"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="@+id/imageButton26"
        app:layout_constraintTop_toBottomOf="@+id/imageButton26" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TableLayout>

    <ImageButton
        android:id="@+id/imageButton23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/imageButton33"
        app:srcCompat="@mipmap/ic_alarme"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/imageButton24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="111dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:srcCompat="@mipmap/ic_ar"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/imageButton25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/imageButton28"
        app:srcCompat="@mipmap/ic_eletro"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/imageButton26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_luzes"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/imageButton27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="69dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_notifications_24dp"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/imageButton28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_portao"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/imageButton29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@+id/imageButton27"
        app:layout_constraintTop_toTopOf="@+id/imageButton27"
        app:srcCompat="@drawable/ic_power_settings_new_black_24dp"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/imageButton30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="@+id/textView17"
        app:srcCompat="@mipmap/ic_solo"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/imageButton31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton30"
        app:srcCompat="@mipmap/ic_teto"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/imageButton32"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="94dp"
        android:layout_marginTop="93dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        android:onClick="lauchUsuario"
        app:layout_constraintBottom_toTopOf="@+id/imageButton26"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2"
        app:srcCompat="@mipmap/ic_usuario_foreground" />

    <ImageButton
        android:id="@+id/imageButton33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:background="@android:color/white"
        android:onClick="lauchVisitas"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/imageButton32"
        app:srcCompat="@mipmap/ic_visita"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="7dp"
        android:text="@string/alarme"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="@+id/imageButton29"
        app:layout_constraintStart_toStartOf="@+id/imageButton27"
        app:layout_constraintTop_toBottomOf="@+id/imageButton23" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="86dp"
        android:layout_height="19dp"
        android:layout_marginBottom="73dp"
        android:layout_marginTop="72dp"
        android:text="@string/visita"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButton25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton33" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="21dp"
        android:text="@string/usuario"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

</android.support.constraint.ConstraintLayout>